guides/weka/manifests/gateway/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: infra-pd-inference-gateway
spec:
  host: llama-3-3-70b-instruct-fp8-dynamic-epp
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 256000
        http2MaxRequests: 256000
        idleTimeout: 900s
        maxRequestsPerConnection: 256000
      tcp:
        connectTimeout: 900s
        maxConnectionDuration: 1800s
        maxConnections: 256000
    tls:
      insecureSkipVerify: true
      mode: SIMPLE
